# dap-rs

./: Cargo.toml  README.md
examples/: basic.rs  headcrab.rs  mock.rs  temp.rs  temp2.rs  temp3.rs  temp4.rs  temp5.rs  temp6.rs
src/: adapter.rs  codec.rs  connection.rs  dap_type.rs  header.rs  lib.rs  msg.rs  request.rs  utils.rs
src/dap_type/: capabilities.rs  column_descriptor.rs  message.rs
src/msg/: dap_type.rs  event.rs  request.rs  response.rs
src/msg/dap_type/: breakpoint.rs  breakpoint_location.rs  breakpoint_locations_arguments.rs  capabilities.rs  checksum.rs  checksum_algorithm.rs  column_descriptor.rs  completion_item.rs  completion_item_type.rs  data_breakpoint.rs  data_breakpoint_access_type.rs  disassembled_instruction.rs  evaluate_ctx.rs  exception_break_mode.rs  exception_breakpoints_filter.rs  exception_details.rs  exception_filter_option.rs  exception_filter_options.rs  exception_options.rs  exception_path_segment.rs  function_breakpoint.rs  goto_target.rs  instruction_breakpoint.rs  invalidated_areas.rs  message.rs  module.rs  modules_view_descriptor.rs  path_format.rs  presentation_hint.rs  scope.rs  source.rs  source_breakpoint.rs  stack_frame.rs  stack_frame_format.rs  step_in_target.rs  stepping_granularity.rs  thread.rs  value_format.rs  variable.rs  variable_presentation_hint.rs  (+1 more)
src/msg/event/: breakpoint.rs  capabilities.rs  continued.rs  exited.rs  initialized.rs  invalidated.rs  loaded_source.rs  memory.rs  memory_event.rs  module.rs  output.rs  (+7 more)
src/request/: acknowledgement_response.rs  error_response.rs  initialize_request.rs
(+47 files in other folders)
