[package]
name = "dap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bstr = "0.2.17"
serde_json = "1.0.73"
fallible-iterator = "0.2.0"
either = "1.6.1"

[dev-dependencies]
rand = "0.8.5"