[package]
name = "dap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bstr = "0.2.17"
serde_json = "1.0.73"
fallible-iterator = "0.2.0"
either = "1.6.1"

[dev-dependencies]
headcrab = {git = "https://github.com/FlyingCanoe/headcrab.git"}
addr2line = {git = "https://github.com/FlyingCanoe/addr2line.git"}
gimli = "0.25.0"